# xxhash_cx

./: .gitignore  LICENSE  README.md
documents/: Doxyfile
include/: xxhash_cx.h
test/: CMakeLists.txt  README.md  xxhash_test.cpp
